--- a/assets/css/xml.css
+++ b/assets/css/xml.css
@@ -1,4 +1,4 @@
-Content{background-image:url();}
+Cinema{background-image:url(../img/body2.jpg);}
 Poster{display:block;
 	  margin:20px auto;
 	  background-color:#FF4500;
