--- a/assets/css/xml.css
+++ b/assets/css/xml.css
@@ -1,4 +1,4 @@
-Cinema{background-image:url(../img/body2.jpg)http://www.ucboyut.com/uploads/converted/15/05/21/1086041887-recycled_texture_background_by_sandeep_m-d6aeau9-k6r-2048x1152-MM-85.jpg;}
+Cinema{background-image:url(http://www.ucboyut.com/uploads/converted/15/05/21/1086041887-recycled_texture_background_by_sandeep_m-d6aeau9-k6r-2048x1152-MM-85.jpg);}
 Poster {
     display: block;
     margin: 20px auto;
