--- a/assets/css/xml.css
+++ b/assets/css/xml.css
@@ -54,6 +54,6 @@ time{    font-size: 20px;
     color: #290077;
     font-weight: bold;
 	}
-genre { color: #FF4500;
+genre { color: #000000;
     	font-size: 15px;
 	}
